kubernetes/go-microservice-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: go-microservice
spec:
  replicas: 2
  selector:
    matchLabels:
      app: go-microservice
  template:
    metadata:
      labels:
        app: go-microservice
    spec:
      containers:
      - name: go-microservice
        image: pmcorrea/my-go-microservice:latest
        ports:
        - containerPort: 8080
