kubernetes/hello-from-pod-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello-from-pod
spec:
  replicas: 2
  selector:
    matchLabels:
      app: hello-from-pod
  template:
    metadata:
      labels:
        app: hello-from-pod
    spec:
      containers:
        - name: hello-from-pod
          image: pmcorrea/hello-from-pod-staging:latest
          ports:
            - containerPort: 3000
