kubernetes/hello-from-pod-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hello-from-pod-service
spec:
  ports:
    - port: 80
      targetPort: 3000
  selector:
    app: hello-from-pod
