kubernetes/http-echo-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: echo-service
spec:
  ports:
  - port: 80
    targetPort: 5678
  selector:
    app: echo
