kubernetes/rabbitmq-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: rabbitmq
spec:
  ports:
  - port: 15672
    targetPort: 15672
    name: management
  - port: 5672
    targetPort: 5672
    name: amqp
  selector:
    app: rabbitmq
