kubernetes/traefik-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: traefik
  namespace: default
spec:
  type: NodePort
  ports:
    - protocol: TCP
      name: web
      port: 80
      nodePort: 30080
    - protocol: TCP
      name: websecure
      port: 443
      nodePort: 30443
    - protocol: TCP
      name: admin
      port: 8080
      nodePort: 30081
  selector:
    app: traefik
