kubernetes/http-echo-ingress-route.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: echo-ingressroute
  namespace: default
spec:
  entryPoints:
    - web
  routes:
    - match: PathPrefix(`/echo`)
      # match: Host(`staging.stackheap.io`) && PathPrefix(`/echo`)
      # - match: Host(`echo.local`) && PathPrefix(`/echo`)
      kind: Rule
      services:
        - name: echo-service
          port: 80
